--- a/telegram/View/Base.lproj/Main.storyboard
+++ b/telegram/View/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--Contacts-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController title="Contacts" id="BYZ-38-t0r" customClass="ViewController" customModule="telegram" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Contacts" id="BYZ-38-t0r" customClass="ContactsViewController" customModule="telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -49,7 +49,7 @@
         <!--Settings-->
         <scene sceneID="y0a-6w-3do">
             <objects>
-                <viewController title="Settings" id="c12-P3-AXi" sceneMemberID="viewController">
+                <viewController title="Settings" id="c12-P3-AXi" customClass="SettingsViewController" customModule="telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="1xr-bw-0gn">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -77,7 +77,7 @@
         <!--Chats-->
         <scene sceneID="cxl-yy-7rp">
             <objects>
-                <viewController title="Chats" id="baQ-iW-B0S" sceneMemberID="viewController">
+                <viewController title="Chats" id="baQ-iW-B0S" customClass="ChatsViewController" customModule="telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="H3k-gv-ux8">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -105,7 +105,7 @@
         <!--Calls-->
         <scene sceneID="KmJ-w5-Foe">
             <objects>
-                <viewController title="Calls" id="pyL-zY-0Q3" sceneMemberID="viewController">
+                <viewController title="Calls" id="pyL-zY-0Q3" customClass="CallsViewController" customModule="telegram" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2hE-uG-xxd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -164,6 +164,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="LIj-Rd-7A6"/>
                     </navigationItem>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="qFY-cL-6Bx">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
