--- a/telegram/View/Base.lproj/Main.storyboard
+++ b/telegram/View/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qhg-1u-QNq">
-                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="540"/>
                                         <subviews>
                                             <searchBar alpha="0.5" contentMode="center" barStyle="black" placeholder="Search for contacts or username" translatesAutoresizingMaskIntoConstraints="NO" id="jdA-OR-LUC">
                                                 <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
@@ -67,8 +67,11 @@
                                                 </constraints>
                                             </stackView>
                                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="TSE-5e-xKL">
-                                                <rect key="frame" x="0.0" y="130" width="375" height="870"/>
+                                                <rect key="frame" x="0.0" y="130" width="375" height="410"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="410" id="3yq-ug-4gS"/>
+                                                </constraints>
                                                 <prototypes>
                                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="InviteFriendsCell" id="m0Y-II-cZP" userLabel="InviteFriendsCell">
                                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -179,7 +182,6 @@
                                             <constraint firstItem="rwK-On-IwJ" firstAttribute="top" secondItem="jdA-OR-LUC" secondAttribute="bottom" id="efp-TA-RSR"/>
                                             <constraint firstAttribute="trailing" secondItem="rwK-On-IwJ" secondAttribute="trailing" id="g35-RX-7Dn"/>
                                             <constraint firstItem="TSE-5e-xKL" firstAttribute="top" secondItem="rwK-On-IwJ" secondAttribute="bottom" id="qpG-w3-wod"/>
-                                            <constraint firstAttribute="height" constant="1000" id="w1K-Wh-M2f"/>
                                             <constraint firstAttribute="trailing" secondItem="jdA-OR-LUC" secondAttribute="trailing" id="zDn-fu-7sc"/>
                                         </constraints>
                                     </view>
@@ -213,6 +215,7 @@
                         <barButtonItem key="rightBarButtonItem" style="plain" systemItem="compose" id="z3m-Ww-NlI"/>
                     </navigationItem>
                     <connections>
+                        <outlet property="contactTableViewHeightConstraint" destination="3yq-ug-4gS" id="p9z-Yd-UfX"/>
                         <outlet property="contactsTableView" destination="TSE-5e-xKL" id="gpi-ab-ryt"/>
                         <outlet property="searchBar" destination="jdA-OR-LUC" id="ksC-4x-8W0"/>
                         <outlet property="userProfileImg" destination="kPS-H7-TSC" id="0Wf-r4-o1O"/>
